# edyant

./: .gitignore  LICENSE  README.md  about.md  contributors.md  proposed_architecture.md  pyproject.toml  update2web.json
.github/workflows/: publish-testpypi.yml
docs/: about_persistence.md  benchmark_ethics.md  benchmark_ethics_valuation.md  edyant_persistence.md  persistence_memorygraph.md  setting_ollama.md
src/edyant/: __init__.py  __main__.py
src/edyant/benchmark/: __init__.py  types.py
src/edyant/benchmark/adapters/: __init__.py  base.py  ollama.py
src/edyant/benchmark/datasets/: __init__.py  loaders.py
src/edyant/benchmark/evaluators/: __init__.py  base.py  judge.py  refusal.py  self_judge.py
src/edyant/benchmark/io/: __init__.py  writers.py
src/edyant/benchmark/runners/: __init__.py  runner.py
src/edyant/benchmark/suites/: __init__.py
src/edyant/benchmark/suites/ethics/: __init__.py
src/edyant/core/: __init__.py
src/edyant/ethics/: __init__.py
src/edyant/persistence/: __init__.py  api.py  config.py  memory_adapter.py  types.py
src/edyant/persistence/adapters/: __init__.py  base.py  ollama.py
src/edyant/persistence/cli/: __init__.py
src/edyant/persistence/memorygraph/: __init__.py  server.py
src/edyant/persistence/storage/: __init__.py  sqlite_store.py
src/edyant/persona/: __init__.py
src/edyant/umwelt/: __init__.py
