[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "edyant"
version = "0.0.1-alpha1"
description = "Framework for embodied AI systems that maintain continuity across physical interactions, environments, and time."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Edyant Labs", email = "arsalan@edyant.com" }]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/edyant_persistence"]
